<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.elasz.myfirstaidkit.AddMedicine">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:columnCount="4"
            android:horizontalSpacing="1dp"
            android:padding="5dp"
            android:rowCount="20"
            android:verticalSpacing="1dp">

            <TextView
                android:layout_columnSpan="4"
                android:id="@+id/tv_id_allinfo"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:background="@drawable/image_border"
                android:id="@+id/imageView_allinfo"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_columnSpan="1"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_rowSpan="3"
                android:scaleType="fitXY"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                app:srcCompat="@drawable/ic_menu_camera" />



            <TextView
                android:id="@+id/txtview_name"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/popular_name"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_name_allinfo"
                android:layout_width="153dp"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/findmedicine_name"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtview_expdate"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/popular_exp"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_expdate_allinfo"
                android:layout_width="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/popular_date"
                android:textSize="18dp" />



            <TextView
                android:id="@+id/txtview_opendate"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/addMedicine_txt_opened"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_opendate_allinfo"
                android:layout_width="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/popular_date"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtview_form"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/popular_form"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <!--<TextView
                android:id="@+id/txt_form"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="Tabletki powlekane"
                android:textSize="13dp" />-->

            <TextView
                android:id="@+id/tv_form_allinfo"
                android:layout_width="250dp"
                android:layout_columnSpan="3"
                android:gravity="center"
                android:hint=" ---- "
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textSize="18dp"></TextView>


            <TextView
                android:id="@+id/txtview_sickness"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/popular_disease"
                android:textColor="@android:color/black"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/tv_purpose_allinfo"
                android:layout_width="250dp"
                android:layout_columnSpan="3"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp"></TextView>

            <TextView
                android:id="@+id/txtview_numberofmedicine"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/popular_number"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_amount_allinfo"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="10dp"
                android:hint=" ---- "
                android:textSize="18dp" />

            <!--<TextView
                android:id="@+id/txt_numberOfMedicine"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="5 "
                android:textSize="13dp" />-->

            <!-- <TextView
                android:id="@+id/txt_formOfMedicine"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="opakowań"
                android:textSize="13dp" />-->

            <TextView
                android:id="@+id/tv_amountform_allinfo"
                android:layout_width="160dp"
                android:layout_columnSpan="2"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:hint=" ---- "
                android:textSize="18dp"></TextView>

            <TextView
                android:id="@+id/txtview_person"
                android:layout_columnSpan="2"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/addMedicine_txt_forperson"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_person_allinfo"
                android:layout_width="160dp"
                android:layout_columnSpan="2"
                android:layout_gravity="right"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp"></TextView>

            <TextView
                android:id="@+id/txtview_subsPower"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/addMedicine_txt_power"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_power_allinfo"
                android:layout_width="155dp"
                android:layout_columnSpan="2"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp" />


            <TextView
                android:id="@+id/txtview_subsActive"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/addMedicine_txt_activeSubs"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <!--<TextView
                android:id="@+id/txt_subsActive"
                android:layout_width="155dp"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="Nazwa edit"
                android:textSize="13dp"
                />-->
            <TextView
                android:id="@+id/tv_subsActive_allinfo"
                android:layout_width="155dp"
                android:layout_columnSpan="2"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp" />


            <TextView
                android:id="@+id/txtview_codeATC"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/addMedicine_txt_code"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_code_allinfo"
                android:layout_width="153dp"
                android:layout_columnSpan="2"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtview_responsibleObject"
                android:layout_width="153dp"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/addMedicine_txt_producer"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_producer_allinfo"
                android:layout_width="153dp"
                android:layout_columnSpan="2"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtview_idmedicine"
                android:layout_width="153dp"
                android:layout_columnSpan="2"
                android:layout_marginLeft="10dp"
                android:text="@string/addMedicine_txt_note"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_note_allinfo"
                android:layout_width="154dp"
                android:layout_columnSpan="2"
                android:layout_marginTop="3dp"
                android:hint=" ---- "
                android:textSize="18dp" />



        </GridLayout>

    </ScrollView>
</LinearLayout>
