<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    card_view:cardCornerRadius="12dp"
    android:foreground="?selectableItemBackground"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/base">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tv_id_item"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="3dp"
            android:textSize="8dp"
            android:visibility="invisible" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tv_code_item"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:textSize="8dp"
            android:visibility="invisible" />

        <ImageView
            android:background="@drawable/image_border"
            android:id="@+id/imageView_oneMedicineItem"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:layout_rowSpan="5"
            android:src="@drawable/ic_photo_camera_black_24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line1"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="110dp">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txtview_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/oneInformationMedicine_txt_name"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_name_item"
                android:layout_columnSpan="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/emptyfields"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:id="@+id/line2"
            android:weightSum="2"
            android:layout_below="@+id/line1">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txtview_expdate"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/oneInformationMedicine_txt_exp"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_expdate_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/popular_date"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:id="@+id/line3"
            android:weightSum="2"
            android:layout_below="@+id/line2">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txtview_form"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/oneInformationMedicine_txt_form"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_form_item"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/emptyfields"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:id="@+id/line4"
            android:weightSum="2"
            android:layout_below="@+id/line3">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txtview_sickness"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/oneInformationMedicine_txt_disease"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_purpose_item"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/emptyfields"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:id="@+id/line5"
            android:weightSum="3"
            android:layout_below="@+id/line4">
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txtview_numberofmedicine"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/oneInformationMedicine_txt_number"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tv_amount_item"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/emptyfields"
            android:textSize="12dp" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_amountform_item"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/emptyfields"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:id="@+id/line6"
            android:weightSum="2"
            android:layout_below="@+id/line5">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txtview_power"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/addMedicine_txt_power"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_poweronemed_item"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:hint="@string/emptyfields"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line7"
            android:weightSum="3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/imageView_oneMedicineItem">

            <Button
                android:background="@drawable/button_shape"
                android:id="@+id/btn_update_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textSize="14dp"
                android:layout_marginRight="5dp"
                app:layout_constraintRight_toRightOf="@+id/base"/>

            <Button
                android:background="@drawable/button_shape"
                android:id="@+id/btn_delete_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_rowSpan="2"
                android:text="@string/delete"
                android:textSize="14dp"/>

            <Button
                android:background="@drawable/button_shape"
                android:id="@+id/btn_moreInfo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/moreinfo"
                android:textSize="14dp"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>